arrow shift correction & image rounded

--- a/css/custom.styl
+++ b/css/custom.styl
@@ -51,6 +51,7 @@ a
 .slick-prev
 	left : -56px
 .slick-next
+	right : -56px
 
 .slick-prev, .slick-next
 	width: 48px
@@ -103,6 +104,7 @@ a
 		div
 			flex : 1
 			img 
+				border-radius : 256px 
 				width : 100%
 				@media screen and (max-width: 960px)
 					display: none
